@@ -2,9 +2,9 @@
 # Some of this was taken from Morfeo's lightdm PKDBUILD
 
 pkgname=lightdm-ubuntu
-_ubuntu_rel=0ubuntu4
-pkgver=1.3.3.${_ubuntu_rel}
-pkgrel=102
+_ubuntu_rel=0ubuntu1
+pkgver=1.4.0.${_ubuntu_rel}
+pkgrel=100
 pkgdesc="A lightweight display manager"
 arch=('i686' 'x86_64')
 url="https://launchpad.net/lightdm"
@@ -37,8 +37,8 @@ source=("https://launchpad.net/ubuntu/+archive/primary/+files/${pkgname%-*}_${pk
         'lightdm.pam'
         'lightdm-autologin.pam'
         'guest-session-cross-distro.patch')
-sha512sums=('72f838970ae920a3993671b0e39ba96abed77bfff7df7c1cf2daa0bddf219d2e9da87f4d0967e125c63c888e9db54b2dbfa3c706d648b7455920e9857805365e'
-            '73e34e44f550f65abe405e54e105c6ff3b2eeb348a6ca562950e83dca3308604c2f54996d185d1a123c9f32aa7dfdca8222d07a21f8886416430d8406fa8098c'
+sha512sums=('dedea48dbf2dde1a84c63691474b6452340b7ba5abd9793afb02f3ffcdb4d664432e3e4bbd6151bfb5861424c1063b42ca99989642b970b4a804ed8bfea6fb1e'
+            '14897f30e2ba3175583b7b3a2fb27b5a00a77c45f9c1a4d129aaa40bee211fe924b50b60f6ba4cd759b19e863a107ab31138ec756e552ba1898ec377a2cf2166'
             'c4813ae27d81ece8bf66e89c1adbb215443076cb6a2b1da28a5ea9528b25052715331a1d76711a2d06cbf9d41f46afa9a868b404112035db2295c177e7f99cc0'
             '485f9eb570de47960479ecf708bb5a29c0af2ee6ca4b122f4a9dd38a9d2b319bc3fdb562879dd2e6d5d3f65d5f8ca97e545c805b3030d925533db8c569ff687a'
             '36c5a6607b1fb3563e24a68378d8321f386616c0d9434f9e17150f74e2d8038bec6bb1ed784bfb959c902eb79deb70866277cca5e09f18178f4cb87d9a15dec9'
