@@ -2,8 +2,8 @@
 # Taken from M0Rf30 morf3089 at gmail dot com
 
 pkgname=lightdm-unity-greeter
-_ubuntu_rel=0ubuntu2
-pkgver=12.10.3.${_ubuntu_rel}
+_ubuntu_rel=0ubuntu3
+pkgver=12.10.4.${_ubuntu_rel}
 pkgrel=100
 pkgdesc="The greeter (login screen) application for Unity. It is implemented as a LightDM greeter."
 arch=('i686' 'x86_64')
@@ -17,8 +17,8 @@ install=unity-greeter.install
 source=("https://launchpad.net/ubuntu/+archive/primary/+files/${pkgname#*-}_${pkgver%.*}-${_ubuntu_rel}.debian.tar.gz"
         "https://launchpad.net/ubuntu/+archive/primary/+files/${pkgname#*-}_${pkgver%.*}.orig.tar.gz"
         "valaflags.patch")
-sha512sums=('8a2d8a76a49c070a520ff4da1efd195c1a63323320847ce04423a26b2d2769ec649e6bcd6f56b8d5f73ef3cc55822fbec0f8f3cf097d080ef8cfdff231e6213d'
-            'fe7b79c64a2664103b7ad3cd66cb8230592c578284e4169696ce486ce8bb353baecc0132a4745ba11e1825614d3c34223d15c6789d7d1ffb96eaea354065248d'
+sha512sums=('53331bfea19f2bb3746f563fa50eb0dcf78803e062034dbdf163f89b8402efdce411f97fd713c5f0f1d93235e227c80fe10f6c60247cd10e28ab0b85b62e6389'
+            'd3518a7bf12be4ae8b08cd4c63aaae224c5b20aaf92f187e9a502ca1173137bf4c5c57b921b579123d95686bb283e53ff90fb2a82863eb57470ad2bb1103b3b4'
             'e231780d657abbd2c9990acc3eb03ec5628c8bcfd0ef42c459a1e30a9227e0377c687a977e1d510ec2c0d375963469752fdd9c7bff686c8fd9b8feeabd55a7ca')
 
 build() {
