@@ -1,7 +1,7 @@
 # Maintainer: Christoph Vigano <mail@cvigano.de>
 _idstr="vanilla"
 pkgname=linux-vanilla
-_basekernel=3.5.5
+_basekernel=3.5.6
 _kernelname=${pkgname#linux}
 pkgver=${_basekernel}
 pkgrel=1
@@ -268,9 +268,9 @@ package() {
   # remove unneeded architectures
   rm -rf "${pkgdir}"/usr/src/linux-${_kernver}/arch/{alpha,arm,arm26,avr32,blackfin,c6x,cris,frv,h8300,hexagon,ia64,m32r,m68k,m68knommu,mips,microblaze,mn10300,openrisc,parisc,powerpc,ppc,s390,score,sh,sh64,sparc,sparc64,tile,unicore32,um,v850,xtensa}
 }
-md5sums=('d9f2f0219443ebfdf59c234cdf53eaf1'
-         'ec3dbb7c31881bcbefdbbaf32398046f'
-         '821ddda39e3b2fdd32eb47852a479240'
+md5sums=('becf09adcea30bcbdb43cdd60710d3cc'
+         'd8a5518681a5f3272b10eb03fbc1a768'
+         'e58f768d8467e1bbf32fd6c059b8b048'
          'eb14dcfd80c00852ef81ded6e826826a'
          '9d3c56a4b999c8bfbd4018089a62f662'
          'c1d58e712112cf8f95e7831012a1e67a'
