@@ -5131,7 +5131,7 @@ CONFIG_QFMT_V1=m
 CONFIG_QFMT_V2=m
 CONFIG_QUOTACTL=y
 CONFIG_QUOTACTL_COMPAT=y
-CONFIG_AUTOFS4_FS=m
+CONFIG_AUTOFS4_FS=y
 CONFIG_FUSE_FS=m
 CONFIG_CUSE=m
 CONFIG_GENERIC_ACL=y
