@@ -2,7 +2,7 @@
 # arg 2:  the old package version
 
 KERNEL_NAME=-vanilla
-KERNEL_VERSION=3.5.5-1-vanilla
+KERNEL_VERSION=3.5.6-1-vanilla
 
 # set a sane PATH to ensure that critical utils like depmod will be found
 export PATH='/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin'
