@@ -1,10 +1,10 @@
 # Maintainer: Andrzej Giniewicz <gginiu@gmail.com>
 pkgname=python2-pandas
-pkgver=0.8.1
+pkgver=0.9.0
 pkgrel=1
 pkgdesc="Cross-section and time series data analysis toolkit"
 arch=('i686' 'x86_64')
-url="http://pandas.sourceforge.net/"
+url="http://pandas.pydata.org/"
 license=('BSD')
 depends=('python2-numpy' 'python2-dateutil')
 makedepends=('python2-distribute' 'cython2')
@@ -16,7 +16,7 @@ optdepends=('python-pytables: for HDF5-based storage'
 options=(!emptydirs)
 
 source=("http://pypi.python.org/packages/source/p/pandas/pandas-${pkgver}.tar.gz")
-md5sums=('dd1e45e25e7efe8813a6270928c30ec0')
+md5sums=('f0b57efeeefbf1e10ec38ace2f29516b')
 
 build() {
   cd "$srcdir"/pandas-$pkgver
