@@ -2,7 +2,7 @@
 # Contributor WarheadsSE <max@warheads.net>
 pkgname=xbmc-rbp-git
 pkgver=20121008
-pkgrel=1
+pkgrel=2
 buildarch=16
 
 pkgdesc="A software media player and entertainment hub for digital media for the Raspberry Pi"
@@ -44,7 +44,7 @@ build() {
   sed -i -e 's:/usr/bin/lsb_release -d:cat /etc/arch-release:' xbmc/utils/SystemInfo.cpp
 
   # Patch to fix TexturePacker build. Ignore that parts of the patch doesn't apply. 
-  patch -i ${srcdir}/xbmc-11.0.2-321-texturepacker-hostflags-and-rework.patch -p1 || return 0
+  patch -i ${srcdir}/xbmc-11.0.2-321-texturepacker-hostflags-and-rework.patch -p1 || true
 
   # Bootstrapping XBMC
   ./bootstrap
