@@ -1,6 +1,12 @@
-2012-10-01 Build User <jenkins@coast-project.org>
+2012-10-08 Build User <jenkins@coast-project.org>
 
       
+      PKGBUILD prepared for new jenkins-ci version 1.485
+
+
+2012-10-01 Build User <jenkins@coast-project.org>
+
+      jenkins-ci-1.484-1:
       PKGBUILD prepared for new jenkins-ci version 1.484
 
 
